# CalculatorD

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  wrangler.jsonc
backend/: Cargo.toml  wrangler.jsonc
backend/src/: main.rs
backend/src/api/: routes.rs
backend/src/calculators/: financial.rs  health.rs  math.rs  mod.rs  technical.rs
backend/static_assets/: app.js
cloudflare-worker/: .dev.vars.example  Cargo.toml  package.json  wrangler.toml
cloudflare-worker/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
frontend/src/components/: bmi_calculator.rs  mod.rs  mortgage_calculator.rs
static/: index.html  site.webmanifest
static/css/: styles.css
