[package]
name = "backend"
version = "1.0.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
rust_decimal = "1.40"
rust_decimal_macros = "1.40"
float-cmp = "0.9"
lazy_static = "1.5"
base64 = "0.22"
